--- a/sala-debate/frontend/sala-de-conversacion2/src/app/globals.css
+++ b/sala-debate/frontend/sala-de-conversacion2/src/app/globals.css
@@ -29,7 +29,7 @@
 }
 
 body {
-	background: #E8DAEF;
+	background: #0c7fa1;
   	color: var(--foreground);
 	font-family: Arial, Helvetica, sans-serif;
 	display: flex;
@@ -37,7 +37,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 130vh;
+	height: 90vh;
 	margin: -20px 0 50px;
 }
 
